// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 0 expense 1`] = `
<div>
  <h4>
    Viewing 
    0
     expense(s) totalling 
    $0.00
  </h4>
  <hr />
</div>
`;

exports[`should render ExpensesSummary correctly with many expenses 1`] = `
<div>
  <h4>
    Viewing 
    2
     expense(s) totalling 
    $12,413,525.56
  </h4>
  <hr />
</div>
`;
